# mai_oop_lab7

./: CMakeLists.txt  README.md
include/: bear.hpp  fight_logic.hpp  npc.hpp  orc.hpp  squirrel.hpp
src/: bear.cpp  fight_logic.cpp  main.cpp  npc.cpp  orc.cpp  squirrel.cpp
test/: test1.cpp
